# hifi-amplifier

Code/ESP32/dsp/: README.md  sdkconfig  sdkconfig.old
Code/ESP32/dsp/main/: CMakeLists.txt  biquad.cpp  biquad.h  circ-buffer.cpp  circ-buffer.h  config.h  dsp-custom.h  dsp.cpp  dsp.h  i2c-bus.cpp  i2c-bus.h  i2c-listener.h  i2s.cpp  i2s.h  main.cpp  message.h  pipeline.cpp  pipeline.h  profile.cpp  profile.h  queue.cpp  queue.h  timer.cpp  timer.h
Code/ESP32/dsp/main/asm/: dsps_biquad_f32_skip_aes3.S  dsps_biquad_f32_skip_dft2_aes3.S  dsps_mulc_f32_skip_ae32.S  dsps_to_float.S
Code/STM32/AmplifierDSP/: .cproject  .mxproject  .project  AmplifierDSP Debug.launch  AmplifierDSP.ioc  README.md
Code/STM32/AmplifierDSP/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Code/STM32/AmplifierDSP/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
Kicad Libraries/: Components.bak  Components.kicad_sym
Kicad Libraries/Components.pretty/: UA8014-AL.kicad_mod
PCBs/AURORA/: readme.md
PCBs/AURORA/ADC/1.0/: ADC.kicad_pcb
PCBs/AURORA/DAC/1.0/: DAC.kicad_pcb  DAC.kicad_sch
PCBs/AURORA/DSP/ESP32/0.1/: DSP.kicad_pcb  DSP.kicad_pro  DSP.kicad_sch
PCBs/AURORA/Extend/1.0/: Extend.kicad_pcb  Extend.kicad_sch
PCBs/AURORA/Microprocessor/1.0/: uProcessor.kicad_pcb  uProcessor.kicad_sch
PCBs/AURORA/_Render/: amp3.scad  bezel.scad
PCBs/_Archive/DAC/1.0/: DAC.kicad_pro
PCBs/_Archive/DAC/1.1/: DAC.kicad_prl  DAC.kicad_pro
PCBs/_Archive/SOIC DIP/1.1/: SOIC DIP.kicad_pcb  SOIC DIP.kicad_prl  SOIC DIP.kicad_pro  SOIC DIP.kicad_sch
(+8 files in other folders)
